# swarm_evolve

./: LICENSE  README.txt
scrimmage/: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  doxyfile
scrimmage-gtri-share/: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  doxyfile
scrimmage-gtri-share/ci/ubuntu16.04/: Dockerfile
scrimmage-gtri-share/ci/ubuntu16.04-incremental/: Dockerfile  Jenkinsfile
scrimmage-gtri-share/cmake/Modules/: CMakeLists.txt.pybind.in  project-config.cmake.in
scrimmage-gtri-share/include/scrimmage-gtri-share/utilities/: Utilities.h
scrimmage-gtri-share/missions/: capture-the-flag-learn.xml  capture-the-flag-learn2.xml  capture-the-flag-learn3.xml  capture-the-flag.xml
scrimmage-gtri-share/msgs/: BaseCollision.proto  CMakeLists.txt  Fire.proto
scrimmage-gtri-share/plugins/: CMakeLists.txt
scrimmage-gtri-share/plugins/autonomy/: CMakeLists.txt
scrimmage-gtri-share/plugins/autonomy/CaptureTheFlagEx1/: CMakeLists.txt  CaptureTheFlagEx1.cpp  CaptureTheFlagEx1.h  CaptureTheFlagEx1.xml
scrimmage-gtri-share/plugins/autonomy/CaptureTheFlagLearn/: CMakeLists.txt  CaptureTheFlagLearn.cpp  CaptureTheFlagLearn.h  CaptureTheFlagLearn.xml
scrimmage-gtri-share/plugins/autonomy/QuadDefense/: CMakeLists.txt  QuadDefense.cpp  QuadDefense.h  QuadDefense.xml
scrimmage-gtri-share/plugins/interaction/: CMakeLists.txt
scrimmage-gtri-share/plugins/interaction/CaptureTheFlagInteraction/: CMakeLists.txt  CaptureTheFlagInteraction.cpp  CaptureTheFlagInteraction.h  CaptureTheFlagInteraction.xml
scrimmage-gtri-share/plugins/metrics/: CMakeLists.txt
scrimmage-gtri-share/plugins/metrics/CaptureTheFlagMetrics/: CMakeLists.txt  CaptureTheFlagMetrics.cpp  CaptureTheFlagMetrics.h  CaptureTheFlagMetrics.xml  CaptureTheFlagScore.cpp  CaptureTheFlagScore.h
scrimmage-gtri-share/scripts/: edit-bashrc.sh
scrimmage-gtri-share/src/: CMakeLists.txt
scrimmage-gtri-share/src/utilities/: CMakeLists.txt  Utilities.cpp
scrimmage/ci/: build.sh  notes.txt
scrimmage/ci/jenkins-slave/: Dockerfile
scrimmage/ci/jenkins-slave/ssh/: authorized_keys
scrimmage/ci/ubuntu14.04/: Dockerfile
scrimmage/ci/ubuntu16.04/: Dockerfile
scrimmage/ci/ubuntu16.04-incremental/: Dockerfile  Jenkinsfile
scrimmage/cmake/Modules/: FindGRPC.cmake  FindJSBSIM.cmake  project-config.cmake.in
scrimmage/config/weights/: survival.xml  unity.xml
scrimmage/data/aircraft/f16gtri/: f16ap.xml  f16gtri.xml  reset-flying.xml
scrimmage/data/scripts/: f16_airspeed.xml  f16_bank.xml  f16_cruise.xml
scrimmage/include/scrimmage/: fwd_decl.h
scrimmage/include/scrimmage/autonomy/: Autonomy.h
scrimmage/include/scrimmage/common/: ColorMaps.h  FileSearch.h  ID.h  PID.h  Plane.h  RTree.h  Random.h  Timer.h  Utilities.h
scrimmage/include/scrimmage/entity/: Contact.h  Entity.h  External.h
scrimmage/include/scrimmage/log/: Frame.h  FrameUpdateClient.h  Log.h
scrimmage/include/scrimmage/math/: Angles.h  Quaternion.h  State.h
scrimmage/include/scrimmage/metrics/: Metrics.h
scrimmage/include/scrimmage/motion/: Controller.h  MotionModel.h
scrimmage/include/scrimmage/network/: Interface.h  ScrimmageServiceImpl.h
scrimmage/include/scrimmage/parse/: ConfigParse.h  MissionParse.h  ParseUtils.h
scrimmage/include/scrimmage/plugin_manager/: Plugin.h  PluginManager.h  RegisterPlugin.h
scrimmage/include/scrimmage/proto/: ProtoConversions.h
scrimmage/include/tiny_dnn/: config.h  network.h
scrimmage/missions/: auction_assign.xml  cars.xml  colliding_spheres.xml  custom.xml  fixed_wing_6dof.xml  rigid_body_6dof.xml  straight-no-gui.xml  straight.xml  straight_cars.xml  straight_jsbsim.xml
scrimmage/msgs/: CMakeLists.txt
scrimmage/notes/: flightgear.md
scrimmage/plugins/autonomy/: CMakeLists.txt
scrimmage/plugins/interaction/: CMakeLists.txt
scrimmage/plugins/sensor/: CMakeLists.txt
scrimmage/python/: CMakeLists.txt
scrimmage/python/scrimmage/: __init__.py  utils.py
scrimmage/scripts/: analysis.py  fg-slave.sh  generate-plugin.sh  generate_scenarios.py  interactive_plots.py  plot_3d_fr.py  plot_scores.py  scrimmage.sh  scrimmage_runner.sh
scrimmage/setup/: apply-jsbsim-patch.sh  build-geographiclib.sh  build-grpc.sh  build-jsbsim.sh  build-protobuf3.sh  build-scrimmage.sh  edit-bashrc.sh  funcs.sh  install-aircraft.sh  install-binaries.sh  install-docker.sh  setup.sh
scrimmage/setup/patches/: grpc.patch
scrimmage/share/: CMakeLists.txt
scrimmage/share/scrimmage/: main.cpp
scrimmage/share/scrimmage-learn/: CMakeLists.txt  main.cpp
scrimmage/share/scrimmage-learncompete/: CMakeLists.txt  main.cpp
scrimmage/share/scrimmage-playback/: main.cpp
scrimmage/share/scrimmage-playlearned/: CMakeLists.txt  main.cpp
scrimmage/share/scrimmage-viz/: main.cpp
scrimmage/src/: CMakeLists.txt
scrimmage/src/autonomy/: Autonomy.cpp
scrimmage/src/common/: ColorMaps.cpp  FileSearch.cpp  ID.cpp  PID.cpp  RTree.cpp  Random.cpp  Timer.cpp  Utilities.cpp
scrimmage/src/entity/: Contact.cpp  Entity.cpp  External.cpp
scrimmage/src/log/: FrameUpdateClient.cpp  Log.cpp
scrimmage/src/math/: Angles.cpp  Quaternion.cpp  State.cpp
scrimmage/src/metrics/: Metrics.cpp
scrimmage/src/network/: Interface.cpp  ScrimmageServiceImpl.cpp
scrimmage/src/parse/: ConfigParse.cpp  MissionParse.cpp  ParseUtils.cpp
scrimmage/src/plugin_manager/: MotionModel.cpp  Plugin.cpp  PluginManager.cpp
scrimmage/src/proto_conversions/: ProtoConversions.cpp
scrimmage/src/pubsub/: MessageBase.cpp  Network.cpp
scrimmage/src/simcontrol/: SimControl.cpp
scrimmage/src/viewer/: CMakeLists.txt  CameraInterface.cpp  Grid.cpp  OriginAxes.cpp  Updater.cpp  Viewer.cpp
scrimmage/test/: CMakeCache.txt  cmake_install.cmake  test_angles.cpp  test_quaternion.cpp  test_rtree.cpp  test_simple.cpp  test_state.cpp
scrimmage/tools/: CMakeLists.txt
scrimmage/tools/aggregate-runs/: main.cpp
scrimmage/tools/filter-runs/: main.cpp
scrimmage/tools/playback/: main.cpp
scrimmage/tools/run-metrics/: CMakeLists.txt  main.cpp
scrimmage/tools/scrimmage-plugin/: main.cpp
(+175 files in other folders)
